# game_randomizer

./: .gitignore  CHANGLOG.md  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
src/: app.py  cli.py  gui.py
src/assets/: boardgames.json  jackbox_games.json  unit_tests.json
src/tests/: test_app.py  test_cli.py  test_gui.au3  test_gui.py
