[metadata]
name = game_randomizer
version = 0.2
author = Mat Martell
author_email = dev@matazar.net
description = A simple GUI/CLI app for selecting a random game based on a JSON file of games.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matazar/game_randomizer
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.11


[options.extras_require]
test =
    pytest

[options.entry_points]
console_scripts =
    game_randomizer=game_randomizer.app:main